--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pyflakes==2.4.0
 pyparsing==3.0.7
 pytest==7.0.1
 pytest-cov==3.0.0
+requests==2.27.1
 six==1.11.0
 SQLAlchemy==1.4.31
 tomli==2.0.1
